# DataStructures2020

./: .gitignore  README.md
00-setup/: CMakeLists.txt  prepare-submit.sh
00-setup/examples/: CMakeLists.txt  main.cpp
00-setup/include/: hello.hpp
00-setup/tests/: CMakeLists.txt  hello_test.cpp
01-deque/: CMakeLists.txt  README.md  prepare-submit.sh
01-deque/examples/: CMakeLists.txt  main.cpp
01-deque/include/: deque.hpp
01-deque/palindrome/: CMakeLists.txt
01-deque/palindrome/include/: palindrome.hpp
01-deque/tests/: CMakeLists.txt  deque_test.cpp  palindrome_test.cpp
02-BST/: .gitignore  CMakeLists.txt  README.md  prepare-submit.sh
02-BST/examples/: CMakeLists.txt  main.cpp
02-BST/include/: BST.hpp
02-BST/tests/: BST_test.cpp  CMakeLists.txt
03-btree/: CMakeLists.txt  README.md  prepare-submit.sh
03-btree/examples/: CMakeLists.txt  main.cpp
03-btree/include/: btree.hpp
03-btree/tests/: CMakeLists.txt  btree_delete_test.cpp  btree_fuzz.cpp  btree_test.cpp
04-rbtree/: CMakeLists.txt  README.md  prepare-submit.sh
04-rbtree/examples/: CMakeLists.txt  README.md  graphviz-formatter.cpp  main.cpp
04-rbtree/include/: rbtree.hpp
04-rbtree/tests/: CMakeLists.txt  rbtree_delete_test.cpp  rbtree_test.cpp  rbtree_test_util.hpp
05-hashtable/: .gitignore  CMakeLists.txt  README.md  prepare-submit.sh
05-hashtable/examples/: CMakeLists.txt  main.cpp
05-hashtable/include/: hash_funcs.hpp  hash_slot.hpp  hash_table.hpp
05-hashtable/tests/: CMakeLists.txt  hashtable_test.cpp
06-fibonacciheap/: .gitignore  CMakeLists.txt  README.md  prepare-submit.sh
06-fibonacciheap/examples/: CMakeLists.txt  main.cpp
06-fibonacciheap/include/: fheap.hpp
06-fibonacciheap/tests/: CMakeLists.txt  fheap_test.cpp
07-graph/: CMakeLists.txt  README.md  prepare-submit.sh
07-graph/examples/: CMakeLists.txt  main.cpp
07-graph/include/: dijkstra_shortest_paths.hpp  graph.hpp  prim_minimum_spanning_tree.hpp  topological_sort.hpp
07-graph/tests/: CMakeLists.txt  graph_test.cpp
